src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>I_perspire_more_when_I_sleep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I perspire more when I sleep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_sometimes_drink_alcohol_3_hours_of_bed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I sometimes drink alcohol 3 hours of bed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_take_a_sleeping_pill_to_help_me_sleep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I take a sleeping pill to help me sleep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_toss_and_turn_during_the_night__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I toss and turn during the night</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_wake_up_and_have_trouble_sleeping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I wake up and have trouble sleeping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_wake_up_with_pain_in_the_morning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I wake up with pain in the morning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_not_interested_why__c</fullName>
        <label>If not interested, why?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_describe__c</fullName>
        <label>If other, please describe</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insomnia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insomnia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Visited_Page__c</fullName>
        <label>Last Visited Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Merge_Type__c</fullName>
        <label>Lead Merge Type*</label>
        <picklist>
            <picklistValues>
                <fullName>Bed Merge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Text__c</fullName>
        <description>This maps the page layout from leads to contacts by mapping record types.</description>
        <inlineHelpText>DO NOT display on layouts</inlineHelpText>
        <label>Lead Record Type Text</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_2__c</fullName>
        <label>Lead Source 2</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B Web Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2C Web Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC Chiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profit Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show - CCA 2014 Backyard (San Francisco)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>123456789123456789123456789123456789123456789123456789123456789123456789123456789</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source Robert*</label>
        <picklist>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/spine-health.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/spine-health.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/spine-health.com/video/choosing-a-mattress-back-pain-video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/spine-health.com/video/choosing-a-mattress-back-pain-video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/spine-health.com/wellness/sleep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/spine-health.com/wellness/sleep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/mattress-bad-back.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/mattress-bad-back.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/review-sleep-number.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/review-sleep-number.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/bed-mattress-review-home.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/bed-mattress-review-home.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/mattressreview-memory-foam.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/mattressreview-memory-foam.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/mattress-reviews-air-bed.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/mattress-reviews-air-bed.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/mattress-heavy-people.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/mattress-heavy-people.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-textad/sleeplikethedead.com/mattress-topper-compare.html</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-textad/sleeplikethedead.com/mattress-topper-compare.php</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-displayad/spine-health.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-displayad/spine-health.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-displayad/spine-health.com/video/choosing-a-mattress-back-pain-video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-displayad/spine-health.com/video/choosing-a-mattress-back-pain-video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-displayad/spine-health.com/wellness/sleep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-displayad/spine-health.com/wellness/sleep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/1/goo/content-displayad/sleeplikethedead.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellibed.com/ppc/2/goo/content-displayad/sleeplikethedead.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - New Lead - not touched yet ;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Attempting Contact ;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2a. Contact - In Progress;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Call after 5pm;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Responded thru email;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Bad Phone Number;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5a. Bad Phone and Email : Bogus Lead;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - BP Email Response-replied to BP eml;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - CUSTOMER CANCELLED APPT;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - CUST RESCHEDULE REQUEST; DEAD - Remove From List ; 9a - Transferred - Not Presented;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9ab - Transferred - Not Presented DEAD;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10- Sent Quote; Part 2 Appt Set; Part 2 Appt Missed; Part 2 Cplt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Not Interested - Yet!; I already bought a bed ; Low Budget; SOLD - Converted; Part 1 Cplt; Part 1 Appt Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <description>The end part of the formula is not needed, not sure why, but we can&apos;t get the syntax to work without it. case( LeadSource , 
 &quot;content&quot;, &quot;PPC&quot;,
 &quot;Bodybilt/SCAleads/fathersday&quot; , &quot;LCL&quot;,
 &quot;Genius&quot; , &quot;LCL&quot;,
&quot;ergobackchair.com&quot;,&quot;PUB&quot;,
&quot;bodybilt/pub/bluedolphin&quot;,&quot;&quot;,
&quot;ORG&quot;)))))))))))</description>
        <formula>if(contains (  text(Lead_Source__c ),&quot;ppc&quot;), &quot;PPC&quot;,
if(contains (  text(Lead_Source__c ),&quot;lcl&quot;), &quot;LCL&quot;,
if(contains (  text(Lead_Source__c ),&quot;pub&quot;), &quot;PUB&quot;,
if(contains ( text ( Lead_Source__c ),&quot;ref&quot;), &quot;REF&quot;,
if(contains ( text ( Lead_Source__c),&quot;pub&quot;), &quot;PUB&quot;,
if(contains ( text ( Lead_Source__c),&quot;radiotv&quot;), &quot;RadioTV&quot;,
if(contains (  text(Lead_Source__c ),&quot;TradeShow&quot;), &quot;TS&quot;,
if(contains (  text(Lead_Source__c),&quot;smo&quot;), &quot;SMO&quot;,
if(contains (  text(Lead_Source__c ),&quot;smo&quot;), &quot;SMO&quot;,
if(contains (  text(Lead_Source__c),&quot;ORG&quot;), &quot;ORG&quot;,
case( LeadSource , 
 &quot;content&quot;, &quot;PPC&quot;,
 &quot;Bodybilt/SCAleads/fathersday&quot; , &quot;LCL&quot;,
 &quot;Genius&quot; , &quot;LCL&quot;,
&quot;ergobackchair.com&quot;,&quot;PUB&quot;,
&quot;bodybilt/pub/bluedolphin&quot;,&quot;&quot;,
&quot;ORG&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leave_Last_Name_BLANK__c</fullName>
        <formula>if(LOWER(LastName)= &quot;temp&quot;,&quot;&quot;,LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Last Name BLANK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Voice_Message_1__c</fullName>
        <label>Left Voice Message 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Left_Voice_Message_2__c</fullName>
        <label>Left Voice Message 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Left_Voice_Message_3__c</fullName>
        <label>Left Voice Message 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_Source__c</fullName>
        <label>Legacy - Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <inlineHelpText>Enter know LinkedIn account(s)</inlineHelpText>
        <label>LinkedIn</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Medical_Treatment__c</fullName>
        <label>Medical Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_Appt_Date__c</fullName>
        <label>Missed Appt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>My_sleep_is_affected_by_room_temperature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My sleep is affected by room temperature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_sleep_is_delayed_interrupted_by_noise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My sleep is delayed/interrupted by noise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Narcolepsy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Narcolepsy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Neck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_interested_included_in_emails__c</fullName>
        <label>Not interested, included in emails.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nurture_Emails_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nurture Emails Sent*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Often_email_patients_of_emails__c</fullName>
        <label>Often email patients? # of emails?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Legger__c</fullName>
        <label>One Legger?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Is_Test_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this lead is  automatically added to ALL campaigns as a test member and will receive all Predictive test emails.</description>
        <inlineHelpText>If checked, this lead is  automatically added to ALL campaigns as a test member and will receive all Predictive test emails.</inlineHelpText>
        <label>Test Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAM__Lead_Score_Rating__c</fullName>
        <description>Predictive default scoring rating based on lead score</description>
        <formula>IF(PAM__Lead_Score__c  &gt;  10000,   &quot;Rating 1&quot;,
IF(PAM__Lead_Score__c  &gt;  8000,     &quot;Rating 2&quot;,
IF(PAM__Lead_Score__c  &gt;  4000,     &quot;Rating 3&quot;,
IF(PAM__Lead_Score__c  &gt;  1000,     &quot;Rating 4&quot;,
IF(PAM__Lead_Score__c  &gt;  1,           &quot;Rating 5&quot;,
&quot;None&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAM__Lead_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accumulated score from all campaigns - lead score write off%.  Lead score is managed on the Manage window in Predictive and is based on opens, clicks and completions.</description>
        <inlineHelpText>Lead score based on online activity such as email opens and web visits.</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAM__Test_Group__c</fullName>
        <externalId>true</externalId>
        <label>Test Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pain_Areas__c</fullName>
        <label>❷ Pain Areas:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_2_Appt_Date__c</fullName>
        <label>Part 2 Appt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_2_Appt_Time__c</fullName>
        <label>Part 2 Appt Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_2_Cplt_Date__c</fullName>
        <label>Part 2 Cplt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pillow_in_Clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pillow in Clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pillow_in_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pillow in Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Attributes_Symptoms_Conditions__c</fullName>
        <label>Primary Attributes/Symptoms/Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hip Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoulder Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Baby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibromyalgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scoliosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Reflux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restless Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accupuncturist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practicioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Decorator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Marketer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Properly_advised_on_your_purchase__c</fullName>
        <label>Properly advised on your purchase?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Method__c</fullName>
        <description>(WS) Custom Field maps to Opportunity on conversion of Lead</description>
        <inlineHelpText>Used to calculate commissions.</inlineHelpText>
        <label>Purchase Method</label>
        <picklist>
            <picklistValues>
                <fullName>Call In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_6mo_1Yr_Purchase_Timeframe__c</fullName>
        <label>Reason for 6mo 1Yr Purchase Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Partner_Consultation_Fee__c</fullName>
        <label>Referral Partner Consultation Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blogger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restless_Leg_Syndrome_RLS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restless Leg Syndrome (RLS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,10) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Person_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Evaluation_Date__c</fullName>
        <label>Schedule Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Evaluation_Time__c</fullName>
        <label>Schedule Evaluation Time</label>
        <picklist>
            <picklistValues>
                <fullName>8:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scoliosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scoliosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Attributes_Symptoms_Conditions__c</fullName>
        <label>Secondary Attributes/Symptoms/Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hip Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoulder Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Baby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibromyalgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scoliosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Reflux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restless Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>